Fixed media queries failing on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,8 @@ h4 {
 
 .label { text-align: right; }
 
-@media only screen and ( max-width: 600px ) {
+@media only screen and ( max-device-width: 640px ),
+       only screen and ( max-width: 640px ) {
     h1 { font-size: 20px; }
     h2 { font-size: 17px; }
     h3 { font-size: 17px; }
@@ -82,7 +83,8 @@ nav {
     right: -40px;
 }
 
-@media only screen and ( max-width: 600px ) {
+@media only screen and ( max-device-width: 640px ),
+       only screen and ( max-width: 640px ) {
     body { margin: 0px; }
 
     section { 
@@ -149,7 +151,8 @@ section {
     background-repeat: no-repeat;
 }
 
-@media only screen and ( max-width: 600px ) {
+@media only screen and ( max-device-width: 640px ),
+       only screen and ( max-width: 640px ) {
     #cv {
         background-position: 200px 200px;
     }
